<resources>
    <string name="app_name">Photo Blog</string>
    <string name="search">Search</string>
    <string name="account">Account</string>
    <string name="logout">Logout</string>
    <string name="welcome">Welcome To</string>
    <string name="photo_blog">Photo Blog</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Your Email</string>
    <string name="login_to_account">Login to Account</string>
    <string name="need_an_account">Need a New Account</string>
    <string name="create_a_new_account">Create a new Account</string>
    <string name="reg_password">Password</string>
    <string name="reg_confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an Account</string>
    <string name="your_name">Your Name</string>
    <string name="save_account_settings">Save Account Settings</string>
    <string name="add_post">Add Post</string>
    <string name="add_description">Add Description</string>
    <string name="post_blog">Post Blog</string>
    <string name="add_picture">Add Picture</string>
    <string name="home">Home</string>
    <string name="notification">Notification</string>
    <string name="bottom_account">Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="lorem_epsum">Lorem Epsum</string>
    <string name="post_image">post_image</string>
    <string name="post_description">Post Description</string>
    <string name="show_post">Show Post</string>

</resources>